# news-classifier

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml
api/: app.py
news_classifier/: __init__.py  analysis.py  cleaning.py  evaluation.py  formatting.py  modelling.py  scraping.py  utils.py
news_classifier/tasks/: __init__.py  base_task.py  clean_data_task.py  evaluate_task.py  format_data_task.py  scrape_data_task.py  train_task.py
sam-app/: template.yaml
sam-app/app/: Dockerfile  app.py
tests/unit/: conftest.py  test_evaluation.py
