[tool.poetry]
name = "news-classifier"
version = "0.1.0"
description = ""
authors = ["Davide Burba <davide.burba@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.21.1"
torch = "^1.12.1"
ipykernel = "^6.15.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
datasets = "^2.4.0"
mlflow = "^1.28.0"
ipywidgets = "^8.0.1"
scikit-learn = "^1.1.2"
seaborn = "^0.11.2"
plotly = "^5.10.0"
fire = "^0.4.0"
evaluate = "^0.2.2"
nbformat = "^5.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-lazy-fixture = "^0.6.3"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
